--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -11,4 +11,24 @@
             Share this post
         </a>
     </p>
+    {#    Тег {% with %} позволяет присваивать значение новой переменной, которая будет#}
+    {#доступна в шаблоне до тех пор, пока не появится тег {% endwith %}#}
+    {% with comments.count as total_comments %}
+        <h2>
+            {{ total_comments }} comment{{ total_comments|pluralize }}
+        </h2>
+    {% endwith %}
+    {% for comment in comments %}
+        <div class="comment">
+            <p class="info">
+{#                Комментарии прокручиваются в цикле посредством переменной {{ forloop.counter }}#}
+                Comment {{ forloop.counter }} by {{ comment.name }}
+                {{ comment.created }}
+            </p>
+            {{ comment.body|linebreaks }}
+        </div>
+    {% empty %}
+        <p>There are no comments.</p>
+    {% endfor %}
+    {% include "blog/post/includes/comment_form.html" %}
 {% endblock %}
