--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -4,17 +4,21 @@
 
 {% block content %}
     <h1>My Blog</h1>
+    {% if tag %}
+        <h2>Posts tagged with "{{ tag.name }}"</h2>
+    {% endif %}
     {% for post in posts %}
         <h2>
             <a href="{{ post.get_absolute_url }}">
                 {{ post.title }}
             </a>
         </h2>
+        <p class="tags">Tags: {{ post.tags.all|join:", " }}</p> {# |join:", " - соединяет как python join #}
         <p class="date">
             Published {{ post.publish }} by {{ post.author }}
         </p>
         {{ post.body|truncatewords:30|linebreaks }}
     {% endfor %}
 
-    {% include "pagination.html" with page=page_obj %}
+    {% include "pagination.html" with page=posts %}
 {% endblock %}
