--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -11,17 +11,29 @@
             Share this post
         </a>
     </p>
-    {#    Тег {% with %} позволяет присваивать значение новой переменной, которая будет#}
+
+    {# Отображение похожих постов #}
+    <h2>Similar posts</h2>
+    {% for post in similar_posts %}
+        <p>
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        </p>
+    {% empty %}
+        There are no similar posts yet.
+    {% endfor %}
+
+    {# Тег {% with %} позволяет присваивать значение новой переменной, которая будет#}
     {#доступна в шаблоне до тех пор, пока не появится тег {% endwith %}#}
     {% with comments.count as total_comments %}
         <h2>
             {{ total_comments }} comment{{ total_comments|pluralize }}
         </h2>
     {% endwith %}
+
     {% for comment in comments %}
         <div class="comment">
             <p class="info">
-{#                Комментарии прокручиваются в цикле посредством переменной {{ forloop.counter }}#}
+                {# Комментарии прокручиваются в цикле посредством переменной {{ forloop.counter }}#}
                 Comment {{ forloop.counter }} by {{ comment.name }}
                 {{ comment.created }}
             </p>
@@ -30,5 +42,7 @@
     {% empty %}
         <p>There are no comments.</p>
     {% endfor %}
+
     {% include "blog/post/includes/comment_form.html" %}
+
 {% endblock %}
