--- a/mysite/blog/templates/blog/base.html
+++ b/mysite/blog/templates/blog/base.html
@@ -15,6 +15,11 @@
     <a href="{% url 'blog:post_list' %}"><h2>My blog</h2></a>
     <p>This is my blog.</p>
     I've written {% total_posts %} posts so far.
+    <p>
+        <a href="{% url "blog:post_feed" %}">
+            Subscribe to my RSS feed
+        </a>
+    </p>
     <h3>Latest posts</h3>
     {% show_latest_posts 3 %}
     <h3>Most commented posts</h3>
